# proto-auth

./: .gitignore  README.md  pyproject.toml
app/: .env  .env.template  app_lifespan.py  main.py
app/api/: __init__.py
app/api/v1/: api_v1.py
app/api/v1/email/: email_controller.py  email_router.py  metadata.py
app/api/v1/email/entities/: bodies.py  responses.py
app/api/v1/google/tools/: google_token.py
app/datasource/: __init__.py  email_datasource.py
app/models/: __init__.py  account_model.py
app/service/: __init__.py  mongo_service.py
app/tools/: __init__.py  app_logger.py  endpoint_metadata.py  enviroment.py  error_messages.py  password.py  time_tools.py  token_generator.py  uuid_generator.py  validators.py
